# PiDTLN2

./: export_dynamic.py  ns.py  requirements.txt  venv.md
models/: README.md  model_1_5.tflite  model_1_dynamic.tflite  model_2_5.tflite  model_2_dynamic.tflite
plugin/: CMakeLists.txt  README.md  dtln_plugin.cpp
train/: README.md  evaluate_tflite.py  export_dynamic_keras.py  generate_dataset_val.py  train_dtln_final.py
